# ArmaDesktopEnvironment

./: .gitignore  README.md  dev_setup.txt  notes.txt  sync.sh
dev/ade/compositor/: ade-background.c  ade-compositor.c  ade-icon-command.c  ade-resolution.c  ade_deskbar.c  ade_deskbar.h  build.sh  context-menu.json  decorations.c  decorations.h  desktop-icons.conf  desktop_icons.c  desktop_icons.h  kill.sh  launch.sh  launch_background.sh  launch_icon_command.sh  launch_resolution.sh  meson.build  run.sh  run_test.sh
dev/ade/compositor/cursors/: Haiku_Arrow.cur
dev/ade/compositor/cursors/haiku/: cursor.theme
